--- a/locale/cs_CZ/LC_MESSAGES/messages.po
+++ b/locale/cs_CZ/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
 "Report-Msgid-Bugs-To: edmondas@girkantas.lt\n"
-"POT-Creation-Date: 2025-04-11 18:23+0300\n"
+"POT-Creation-Date: 2025-04-11 19:26+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,7 +44,9 @@ msgstr ""
 msgid ""
 "Default session encryption key is used, please set it in your configuration "
 "file."
-msgstr "Používá se výchozí šifrovací klíč relace, nastavte jej prosím v konfiguračním souboru."
+msgstr ""
+"Používá se výchozí šifrovací klíč relace, nastavte jej prosím v "
+"konfiguračním souboru."
 
 #: lib/Application/Presenter/PaginationPresenter.php:52
 #: templates/search.html:135 templates/search.html:252
@@ -104,7 +106,9 @@ msgstr "The record has been deleted successfully."
 msgid ""
 "The record was deleted but the comment was preserved because similar records "
 "exist."
-msgstr "Záznam byl smazán, ale komentář byl zachován, protože existují podobné záznamy."
+msgstr ""
+"Záznam byl smazán, ale komentář byl zachován, protože existují podobné "
+"záznamy."
 
 #: lib/Domain/Model/ZoneTemplate.php:398 lib/Domain/Service/DnsRecord.php:393
 msgid "You do not have the permission to edit this record."
@@ -271,13 +275,17 @@ msgstr "You do not have the permission to access the migrations."
 msgid ""
 "Old migrations table detected. Please remove the `migrations` table before "
 "proceeding."
-msgstr "Byla zjištěna stará migrační tabulka. Před pokračováním odstraňte tabulku `migrations`."
+msgstr ""
+"Byla zjištěna stará migrační tabulka. Před pokračováním odstraňte tabulku "
+"`migrations`."
 
 #: lib/Application/Controller/MigrationsController.php:49
 msgid ""
 "Database access check failed. Please ensure the current database user has "
 "the necessary permissions to create and alter tables."
-msgstr "Kontrola přístupu k databázi selhala. Ujistěte se, že aktuální uživatel databáze má potřebná oprávnění k vytváření a úpravě tabulek."
+msgstr ""
+"Kontrola přístupu k databázi selhala. Ujistěte se, že aktuální uživatel "
+"databáze má potřebná oprávnění k vytváření a úpravě tabulek."
 
 #: lib/Domain/Service/DnsRecord.php:795
 msgid "You do not have the permission to add a master zone."
@@ -403,7 +411,8 @@ msgstr "The record has been updated successfully."
 msgid ""
 "LDAP users cannot change their password here. Please contact your "
 "administrator."
-msgstr "Uživatelé LDAP zde nemohou změnit své heslo. Kontaktujte prosím správce."
+msgstr ""
+"Uživatelé LDAP zde nemohou změnit své heslo. Kontaktujte prosím správce."
 
 #: lib/Application/Controller/DnssecAddKeyController.php:101
 msgid "Zone key has been added successfully."
@@ -511,7 +520,9 @@ msgstr "An empty password is not allowed"
 msgid ""
 "Failed to call function exec. Make sure that exec is not listed in "
 "disable_functions at php.ini"
-msgstr "Nepodařilo se zavolat funkci exec. Ujistěte se, že exec není uveden v disable_functions v php.ini"
+msgstr ""
+"Nepodařilo se zavolat funkci exec. Ujistěte se, že exec není uveden v "
+"disable_functions v php.ini"
 
 #: lib/Infrastructure/Service/PdnsUtilProvider.php:56
 msgid "Failed to call pdnssec utility."
@@ -620,7 +631,8 @@ msgstr "Add quotes around TXT record content."
 #: lib/Domain/Service/Dns.php:607
 msgid ""
 "This is not a valid CNAME. Did you assign an MX or NS record to the record?"
-msgstr "Toto není platný záznam CNAME. Přiřadili jste k záznamu záznam MX nebo NS?"
+msgstr ""
+"Toto není platný záznam CNAME. Přiřadili jste k záznamu záznam MX nebo NS?"
 
 #: lib/Domain/Service/Dns.php:636
 msgid ""
@@ -640,7 +652,9 @@ msgstr "Empty CNAME records are not allowed."
 msgid ""
 "You can not point a NS or MX record to a CNAME record. Remove or rename the "
 "CNAME record first, or take another name."
-msgstr "Nemůžete nasměrovat záznam NS nebo MX na záznam CNAME. Nejprve odstraňte nebo přejmenujte záznam CNAME, nebo použijte jiný název."
+msgstr ""
+"Nemůžete nasměrovat záznam NS nebo MX na záznam CNAME. Nejprve odstraňte "
+"nebo přejmenujte záznam CNAME, nebo použijte jiný název."
 
 #: lib/Domain/Service/Dns.php:735
 msgid "Invalid value for content field of HINFO record."
@@ -726,7 +740,9 @@ msgstr "There is already a supermaster with this IP address and hostname."
 msgid ""
 "You are trying to delete the SOA record. You are not allowed to remove it, "
 "unless you remove the entire zone."
-msgstr "Pokoušíte se smazat záznam SOA. Není dovoleno jej odstranit, pokud neodstraníte celou zónu."
+msgstr ""
+"Pokoušíte se smazat záznam SOA. Není dovoleno jej odstranit, pokud "
+"neodstraníte celou zónu."
 
 #: lib/Domain/Service/DnsRecord.php:790 lib/Domain/Service/DnsRecord.php:1404
 #, php-format
@@ -1017,7 +1033,9 @@ msgstr "Delete user"
 msgid ""
 "You are about to delete a user. This user is owner for a number of zones. "
 "Please decide what to do with these zones."
-msgstr "Chystáte se smazat uživatele. Tento uživatel je vlastníkem několika zón. Rozhodněte, co s těmito zónami."
+msgstr ""
+"Chystáte se smazat uživatele. Tento uživatel je vlastníkem několika zón. "
+"Rozhodněte, co s těmito zónami."
 
 #: templates/delete_user.html:22
 msgid "Zone"
@@ -1313,7 +1331,9 @@ msgstr "Examples:"
 msgid ""
 "To add a subdomain foo in a zone template you would put foo.[ZONE] into the "
 "name field."
-msgstr "Chcete-li přidat subdoménu foo do šablony zóny, vložte foo.[ZONE] do pole pro název."
+msgstr ""
+"Chcete-li přidat subdoménu foo do šablony zóny, vložte foo.[ZONE] do pole "
+"pro název."
 
 #: templates/add_zone_templ_record.html:78 templates/edit_zone_templ.html:94
 msgid "To add a wildcard record put *.[ZONE] in the name field."
@@ -1327,7 +1347,9 @@ msgstr "Use just [ZONE] to have the domain itself return a value."
 msgid ""
 "For the SOA record, place [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 "
 "86400 in the content field."
-msgstr "Pro záznam SOA vložte [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 do pole obsahu."
+msgstr ""
+"Pro záznam SOA vložte [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 do "
+"pole obsahu."
 
 #: templates/delete_perm_templ.html:10
 msgid "Delete permission template"
@@ -1559,14 +1581,20 @@ msgid ""
 "supermaster. Deleting the zone now, will result in temporary removal only. "
 "Whenever the supermaster sends a notification for this zone, it will be "
 "added again!"
-msgstr "Chystáte se smazat podřízenou zónu, jejíž hlavní jmenný server je supermaster. Smazání zóny nyní povede pouze k dočasnému odstranění. Kdykoli supermaster pošle oznámení pro tuto zónu, bude opět přidána!"
+msgstr ""
+"Chystáte se smazat podřízenou zónu, jejíž hlavní jmenný server je "
+"supermaster. Smazání zóny nyní povede pouze k dočasnému odstranění. Kdykoli "
+"supermaster pošle oznámení pro tuto zónu, bude opět přidána!"
 
 #: templates/search.html:9
 msgid ""
 "Enter a hostname or IP address. SQL LIKE syntax supported: an underscore (_) "
 "in pattern matches any single character, a percent sign (%) matches any "
 "string of zero or more characters."
-msgstr "Zadejte název hostitele nebo IP adresu. Podporována je syntaxe SQL LIKE: podtržítko (_) ve vzoru odpovídá libovolnému jednotlivému znaku, procento (%) odpovídá libovolnému řetězci nulových nebo více znaků."
+msgstr ""
+"Zadejte název hostitele nebo IP adresu. Podporována je syntaxe SQL LIKE: "
+"podtržítko (_) ve vzoru odpovídá libovolnému jednotlivému znaku, procento "
+"(%) odpovídá libovolnému řetězci nulových nebo více znaků."
 
 #: templates/search.html:27
 msgid "Provide a keyword for your search"
@@ -1793,7 +1821,10 @@ msgid ""
 "You now want to give limited rights to Poweradmin so it can update the data "
 "in the tables. To do this, you should create a new user and give it rights "
 "to select, delete, insert, and update records in the PowerDNS database."
-msgstr "Nyní chcete dát omezená práva Poweradminu, aby mohl aktualizovat data v tabulkách. K tomu byste měli vytvořit nového uživatele a dát mu práva na výběr, mazání, vkládání a aktualizaci záznamů v databázi PowerDNS."
+msgstr ""
+"Nyní chcete dát omezená práva Poweradminu, aby mohl aktualizovat data v "
+"tabulkách. K tomu byste měli vytvořit nového uživatele a dát mu práva na "
+"výběr, mazání, vkládání a aktualizaci záznamů v databázi PowerDNS."
 
 #: install/templates/step6.html.twig:18
 msgid "Database Commands"
@@ -1816,7 +1847,9 @@ msgstr "Poznámka:"
 msgid ""
 "Since you are using SQLite, there is no need to create a new user with "
 "limited rights."
-msgstr "Protože používáte SQLite, není potřeba vytvářet nového uživatele s omezenými právy."
+msgstr ""
+"Protože používáte SQLite, není potřeba vytvářet nového uživatele s omezenými "
+"právy."
 
 #: install/templates/step5.html.twig:134 install/templates/step3.html.twig:56
 msgid "Continue to step"
@@ -1855,7 +1888,7 @@ msgid ""
 "Please select your preferred language to continue with the installation:"
 msgstr "Vyberte prosím preferovaný jazyk pro pokračování v instalaci:"
 
-#: install/templates/step1.html.twig:196
+#: install/templates/step1.html.twig:209
 msgid "Begin Installation"
 msgstr "Begin Installation"
 
@@ -1875,7 +1908,9 @@ msgstr "Příprava databáze:"
 msgid ""
 "The installer needs to modify the PowerDNS database with tables for "
 "Poweradmin. Use an account with sufficient rights (like root) to proceed."
-msgstr "Instalační program potřebuje upravit databázi PowerDNS s tabulkami pro Poweradmin. Použijte účet s dostatečnými právy (jako root) k pokračování."
+msgstr ""
+"Instalační program potřebuje upravit databázi PowerDNS s tabulkami pro "
+"Poweradmin. Použijte účet s dostatečnými právy (jako root) k pokračování."
 
 #: install/templates/step4.html.twig:20
 msgid "Database Settings"
@@ -1943,7 +1978,9 @@ msgstr "Úplná cesta k souboru databáze SQLite"
 
 #: install/templates/step4.html.twig:96
 msgid "File must exist with web server read/write access. Use absolute path."
-msgstr "Soubor musí existovat s přístupem pro čtení/zápis pro webový server. Použijte absolutní cestu."
+msgstr ""
+"Soubor musí existovat s přístupem pro čtení/zápis pro webový server. "
+"Použijte absolutní cestu."
 
 #: install/templates/step4.html.twig:104
 msgid "DB charset"
@@ -1955,7 +1992,8 @@ msgstr "Použít výchozí"
 
 #: install/templates/step4.html.twig:111
 msgid "Charset for new tables. Leave empty for database default."
-msgstr "Znaková sada pro nové tabulky. Ponechte prázdné pro výchozí hodnotu databáze."
+msgstr ""
+"Znaková sada pro nové tabulky. Ponechte prázdné pro výchozí hodnotu databáze."
 
 #: install/templates/step4.html.twig:116
 msgid "DB collation"
@@ -1964,7 +2002,8 @@ msgstr "Porovnávání databáze"
 #: install/templates/step4.html.twig:123
 msgid ""
 "Collation rules for character comparison. Leave empty for database default."
-msgstr "Pravidla porovnávání znaků. Ponechte prázdné pro výchozí hodnotu databáze."
+msgstr ""
+"Pravidla porovnávání znaků. Ponechte prázdné pro výchozí hodnotu databáze."
 
 #: install/templates/step4.html.twig:131
 msgid "Administrator Account"
@@ -1981,7 +2020,8 @@ msgstr "Zadejte heslo"
 #: install/templates/step4.html.twig:145
 msgid ""
 "Password for \"admin\" username with full rights to the Poweradmin interface."
-msgstr "Heslo pro \"admin\" uživatelské jméno s plnými právy pro rozhraní Poweradmin."
+msgstr ""
+"Heslo pro \"admin\" uživatelské jméno s plnými právy pro rozhraní Poweradmin."
 
 #: install/templates/step2.html.twig:3
 msgid "System Requirements"
@@ -1997,7 +2037,8 @@ msgstr "Kontrola požadavků:"
 
 #: install/templates/step2.html.twig:12
 msgid "Verifying that your server meets all requirements to run Poweradmin."
-msgstr "Ověřování, že váš server splňuje všechny požadavky pro spuštění Poweradmin."
+msgstr ""
+"Ověřování, že váš server splňuje všechny požadavky pro spuštění Poweradmin."
 
 #: install/templates/step2.html.twig:20
 msgid "PHP Version"
@@ -2070,7 +2111,9 @@ msgstr "Uživatel databáze"
 #: install/templates/step5.html.twig:31
 msgid ""
 "Poweradmin database username with restricted access. Not for web UI login."
-msgstr "Uživatelské jméno databáze Poweradmin s omezeným přístupem. Ne pro přihlášení do webového rozhraní."
+msgstr ""
+"Uživatelské jméno databáze Poweradmin s omezeným přístupem. Ne pro "
+"přihlášení do webového rozhraní."
 
 #: install/templates/step5.html.twig:41
 msgid "Provide the user password"
@@ -2096,7 +2139,9 @@ msgstr "Zadejte správce DNS"
 msgid ""
 "When creating SOA records and no hostmaster is provided, this value here "
 "will be used."
-msgstr "Při vytváření záznamů SOA a pokud není poskytnut hostmaster, bude použita tato hodnota."
+msgstr ""
+"Při vytváření záznamů SOA a pokud není poskytnut hostmaster, bude použita "
+"tato hodnota."
 
 #: install/templates/step5.html.twig:70
 msgid "Primary nameserver"
@@ -2110,7 +2155,9 @@ msgstr "Zadejte primární jmenný server"
 msgid ""
 "When creating new zones using the template, this value will be used as "
 "primary nameserver."
-msgstr "Při vytváření nových zón pomocí šablony bude tato hodnota použita jako primární nameserver."
+msgstr ""
+"Při vytváření nových zón pomocí šablony bude tato hodnota použita jako "
+"primární nameserver."
 
 #: install/templates/step5.html.twig:82
 msgid "Secondary nameserver"
@@ -2124,7 +2171,9 @@ msgstr "Zadejte sekundární jmenný server"
 msgid ""
 "When creating new zones using the template, this value will be used as "
 "secondary nameserver."
-msgstr "Při vytváření nových zón pomocí šablony bude tato hodnota použita jako sekundární nameserver."
+msgstr ""
+"Při vytváření nových zón pomocí šablony bude tato hodnota použita jako "
+"sekundární nameserver."
 
 #: install/templates/step5.html.twig:95
 msgid "Tertiary Nameserver"
@@ -2138,7 +2187,9 @@ msgstr "volitelné"
 msgid ""
 "When creating new zones using the template, this optional value will be used "
 "as tertiary nameserver."
-msgstr "Při vytváření nových zón pomocí šablony bude tato volitelná hodnota použita jako terciální nameserver."
+msgstr ""
+"Při vytváření nových zón pomocí šablony bude tato volitelná hodnota použita "
+"jako terciální nameserver."
 
 #: install/templates/step5.html.twig:108
 msgid "Quaternary Nameserver"
@@ -2148,7 +2199,9 @@ msgstr "Kvartární jmenný server"
 msgid ""
 "When creating new zones using the template, this optional value will be used "
 "as quaternary nameserver."
-msgstr "Při vytváření nových zón pomocí šablony bude tato volitelná hodnota použita jako kvartérní nameserver."
+msgstr ""
+"Při vytváření nových zón pomocí šablony bude tato volitelná hodnota použita "
+"jako kvartérní nameserver."
 
 #: install/templates/step8.html.twig:3 install/templates/step8.html.twig:8
 msgid "Installation complete"
@@ -2178,7 +2231,9 @@ msgstr ""
 msgid ""
 "Poweradmin will not function if the install directory exists, as a security "
 "measure."
-msgstr "Poweradmin nebude fungovat, pokud adresář install existuje, jako bezpečnostní opatření."
+msgstr ""
+"Poweradmin nebude fungovat, pokud adresář install existuje, jako "
+"bezpečnostní opatření."
 
 #: install/templates/step8.html.twig:22
 msgid "Next Steps"
@@ -2220,7 +2275,9 @@ msgstr "O PowerDNS"
 msgid ""
 "PowerDNS is a DNS server that stores its data in an SQL database. Poweradmin "
 "will help you manage this database via a web interface."
-msgstr "PowerDNS je DNS server, který ukládá svá data v SQL databázi. Poweradmin vám pomůže spravovat tuto databázi prostřednictvím webového rozhraní."
+msgstr ""
+"PowerDNS je DNS server, který ukládá svá data v SQL databázi. Poweradmin vám "
+"pomůže spravovat tuto databázi prostřednictvím webového rozhraní."
 
 #: install/templates/step3.html.twig:21
 msgid "Before proceeding, you should have:"
@@ -2286,7 +2343,9 @@ msgstr "Make sure the SQLite database file exists"
 msgid ""
 "Check that the web server has read and write permissions for the database "
 "file"
-msgstr "Zkontrolujte, zda má webový server oprávnění ke čtení a zápisu pro soubor databáze"
+msgstr ""
+"Zkontrolujte, zda má webový server oprávnění ke čtení a zápisu pro soubor "
+"databáze"
 
 #: install/helpers/InstallStepHandler.php:187
 msgid "Verify the full path to the database file is correct and accessible"
@@ -2297,19 +2356,24 @@ msgstr "Verify the full path to the database file is correct and accessible"
 msgid ""
 "The SQLite database file %s does not exist. Please create the database file "
 "before proceeding."
-msgstr "Soubor databáze SQLite %s neexistuje. Před pokračováním vytvořte soubor databáze."
+msgstr ""
+"Soubor databáze SQLite %s neexistuje. Před pokračováním vytvořte soubor "
+"databáze."
 
 #: install/helpers/DatabaseHelper.php:96
 #, php-format
 msgid ""
 "The SQLite database file %s is not readable. Please check file permissions."
-msgstr "Soubor databáze SQLite %s není čitelný. Zkontrolujte oprávnění k souboru."
+msgstr ""
+"Soubor databáze SQLite %s není čitelný. Zkontrolujte oprávnění k souboru."
 
 #: install/helpers/DatabaseHelper.php:104
 #, php-format
 msgid ""
 "The SQLite database file %s is not writable. Please check file permissions."
-msgstr "Do souboru databáze SQLite %s nelze zapisovat. Zkontrolujte oprávnění k souboru."
+msgstr ""
+"Do souboru databáze SQLite %s nelze zapisovat. Zkontrolujte oprávnění k "
+"souboru."
 
 #: install/helpers/DatabaseHelper.php:116
 #, php-format
@@ -2324,5 +2388,8 @@ msgstr "or"
 msgid ""
 "No configuration file found. Please create the config/settings.php file "
 "before proceeding."
-msgstr "Nebyl nalezen konfigurační soubor. Před pokračováním vytvořte soubor config/settings.php."
+msgstr ""
+"Nebyl nalezen konfigurační soubor. Před pokračováním vytvořte soubor config/"
+"settings.php."
+
 
