--- a/locale/pl_PL/LC_MESSAGES/messages.po
+++ b/locale/pl_PL/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
 "Report-Msgid-Bugs-To: edmondas@girkantas.lt\n"
-"POT-Creation-Date: 2025-04-11 18:23+0300\n"
+"POT-Creation-Date: 2025-04-11 19:26+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,7 +44,9 @@ msgstr ""
 msgid ""
 "Default session encryption key is used, please set it in your configuration "
 "file."
-msgstr "Używany jest domyślny klucz szyfrowania sesji, proszę ustawić go w pliku konfiguracyjnym."
+msgstr ""
+"Używany jest domyślny klucz szyfrowania sesji, proszę ustawić go w pliku "
+"konfiguracyjnym."
 
 #: lib/Application/Presenter/PaginationPresenter.php:52
 #: templates/search.html:135 templates/search.html:252
@@ -104,7 +106,9 @@ msgstr "The record has been deleted successfully."
 msgid ""
 "The record was deleted but the comment was preserved because similar records "
 "exist."
-msgstr "Rekord został usunięty, ale komentarz został zachowany, ponieważ istnieją podobne rekordy."
+msgstr ""
+"Rekord został usunięty, ale komentarz został zachowany, ponieważ istnieją "
+"podobne rekordy."
 
 #: lib/Domain/Model/ZoneTemplate.php:398 lib/Domain/Service/DnsRecord.php:393
 msgid "You do not have the permission to edit this record."
@@ -271,13 +275,18 @@ msgstr "You do not have the permission to access the migrations."
 msgid ""
 "Old migrations table detected. Please remove the `migrations` table before "
 "proceeding."
-msgstr "Wykryto starą tabelę migracji. Proszę usunąć tabelę `migrations` przed kontynuowaniem."
+msgstr ""
+"Wykryto starą tabelę migracji. Proszę usunąć tabelę `migrations` przed "
+"kontynuowaniem."
 
 #: lib/Application/Controller/MigrationsController.php:49
 msgid ""
 "Database access check failed. Please ensure the current database user has "
 "the necessary permissions to create and alter tables."
-msgstr "Sprawdzenie dostępu do bazy danych nie powiodło się. Upewnij się, że bieżący użytkownik bazy danych ma niezbędne uprawnienia do tworzenia i modyfikowania tabel."
+msgstr ""
+"Sprawdzenie dostępu do bazy danych nie powiodło się. Upewnij się, że bieżący "
+"użytkownik bazy danych ma niezbędne uprawnienia do tworzenia i modyfikowania "
+"tabel."
 
 #: lib/Domain/Service/DnsRecord.php:795
 msgid "You do not have the permission to add a master zone."
@@ -403,7 +412,9 @@ msgstr "The record has been updated successfully."
 msgid ""
 "LDAP users cannot change their password here. Please contact your "
 "administrator."
-msgstr "Użytkownicy LDAP nie mogą tutaj zmieniać swojego hasła. Proszę skontaktować się z administratorem."
+msgstr ""
+"Użytkownicy LDAP nie mogą tutaj zmieniać swojego hasła. Proszę skontaktować "
+"się z administratorem."
 
 #: lib/Application/Controller/DnssecAddKeyController.php:101
 msgid "Zone key has been added successfully."
@@ -511,7 +522,9 @@ msgstr "An empty password is not allowed"
 msgid ""
 "Failed to call function exec. Make sure that exec is not listed in "
 "disable_functions at php.ini"
-msgstr "Nie udało się wywołać funkcji exec. Upewnij się, że exec nie jest wymieniony w disable_functions w php.ini"
+msgstr ""
+"Nie udało się wywołać funkcji exec. Upewnij się, że exec nie jest wymieniony "
+"w disable_functions w php.ini"
 
 #: lib/Infrastructure/Service/PdnsUtilProvider.php:56
 msgid "Failed to call pdnssec utility."
@@ -620,7 +633,9 @@ msgstr "Add quotes around TXT record content."
 #: lib/Domain/Service/Dns.php:607
 msgid ""
 "This is not a valid CNAME. Did you assign an MX or NS record to the record?"
-msgstr "To nie jest prawidłowy CNAME. Czy przypisałeś rekord MX lub NS do tego rekordu?"
+msgstr ""
+"To nie jest prawidłowy CNAME. Czy przypisałeś rekord MX lub NS do tego "
+"rekordu?"
 
 #: lib/Domain/Service/Dns.php:636
 msgid ""
@@ -640,7 +655,9 @@ msgstr "Empty CNAME records are not allowed."
 msgid ""
 "You can not point a NS or MX record to a CNAME record. Remove or rename the "
 "CNAME record first, or take another name."
-msgstr "Nie można wskazywać rekordu NS lub MX na rekord CNAME. Najpierw usuń lub zmień nazwę rekordu CNAME, albo użyj innej nazwy."
+msgstr ""
+"Nie można wskazywać rekordu NS lub MX na rekord CNAME. Najpierw usuń lub "
+"zmień nazwę rekordu CNAME, albo użyj innej nazwy."
 
 #: lib/Domain/Service/Dns.php:735
 msgid "Invalid value for content field of HINFO record."
@@ -650,7 +667,9 @@ msgstr "Invalid value for content field of HINFO record."
 msgid ""
 "Invalid value for name field of SOA record. It should be the name of the "
 "zone."
-msgstr "Nieprawidłowa wartość dla pola nazwy rekordu SOA. Powinna to być nazwa strefy."
+msgstr ""
+"Nieprawidłowa wartość dla pola nazwy rekordu SOA. Powinna to być nazwa "
+"strefy."
 
 #: lib/Domain/Service/Dns.php:863
 msgid "Invalid service value in name field of SRV record."
@@ -726,7 +745,9 @@ msgstr "There is already a supermaster with this IP address and hostname."
 msgid ""
 "You are trying to delete the SOA record. You are not allowed to remove it, "
 "unless you remove the entire zone."
-msgstr "Próbujesz usunąć rekord SOA. Nie możesz go usunąć, chyba że usuniesz całą strefę."
+msgstr ""
+"Próbujesz usunąć rekord SOA. Nie możesz go usunąć, chyba że usuniesz całą "
+"strefę."
 
 #: lib/Domain/Service/DnsRecord.php:790 lib/Domain/Service/DnsRecord.php:1404
 #, php-format
@@ -1017,7 +1038,9 @@ msgstr "Delete user"
 msgid ""
 "You are about to delete a user. This user is owner for a number of zones. "
 "Please decide what to do with these zones."
-msgstr "Zamierzasz usunąć użytkownika. Ten użytkownik jest właścicielem kilku stref. Proszę zdecydować, co zrobić z tymi strefami."
+msgstr ""
+"Zamierzasz usunąć użytkownika. Ten użytkownik jest właścicielem kilku stref. "
+"Proszę zdecydować, co zrobić z tymi strefami."
 
 #: templates/delete_user.html:22
 msgid "Zone"
@@ -1313,7 +1336,9 @@ msgstr "Examples:"
 msgid ""
 "To add a subdomain foo in a zone template you would put foo.[ZONE] into the "
 "name field."
-msgstr "Aby dodać subdomenę foo w szablonie strefy, należy wpisać foo.[ZONE] w polu nazwy."
+msgstr ""
+"Aby dodać subdomenę foo w szablonie strefy, należy wpisać foo.[ZONE] w polu "
+"nazwy."
 
 #: templates/add_zone_templ_record.html:78 templates/edit_zone_templ.html:94
 msgid "To add a wildcard record put *.[ZONE] in the name field."
@@ -1327,7 +1352,9 @@ msgstr "Use just [ZONE] to have the domain itself return a value."
 msgid ""
 "For the SOA record, place [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 "
 "86400 in the content field."
-msgstr "Dla rekordu SOA, umieść [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 w polu zawartości."
+msgstr ""
+"Dla rekordu SOA, umieść [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 "
+"w polu zawartości."
 
 #: templates/delete_perm_templ.html:10
 msgid "Delete permission template"
@@ -1559,14 +1586,21 @@ msgid ""
 "supermaster. Deleting the zone now, will result in temporary removal only. "
 "Whenever the supermaster sends a notification for this zone, it will be "
 "added again!"
-msgstr "Zamierzasz usunąć strefę slave, której główny serwer nazw jest supermasterem. Usunięcie strefy teraz spowoduje tylko tymczasowe usunięcie. Za każdym razem, gdy supermaster wyśle powiadomienie dla tej strefy, zostanie ona dodana ponownie!"
+msgstr ""
+"Zamierzasz usunąć strefę slave, której główny serwer nazw jest "
+"supermasterem. Usunięcie strefy teraz spowoduje tylko tymczasowe usunięcie. "
+"Za każdym razem, gdy supermaster wyśle powiadomienie dla tej strefy, "
+"zostanie ona dodana ponownie!"
 
 #: templates/search.html:9
 msgid ""
 "Enter a hostname or IP address. SQL LIKE syntax supported: an underscore (_) "
 "in pattern matches any single character, a percent sign (%) matches any "
 "string of zero or more characters."
-msgstr "Wprowadź nazwę hosta lub adres IP. Obsługiwana jest składnia SQL LIKE: podkreślenie (_) w wzorcu pasuje do dowolnego pojedynczego znaku, znak procentu (%) pasuje do dowolnego ciągu znaków o długości zero lub więcej."
+msgstr ""
+"Wprowadź nazwę hosta lub adres IP. Obsługiwana jest składnia SQL LIKE: "
+"podkreślenie (_) w wzorcu pasuje do dowolnego pojedynczego znaku, znak "
+"procentu (%) pasuje do dowolnego ciągu znaków o długości zero lub więcej."
 
 #: templates/search.html:27
 msgid "Provide a keyword for your search"
@@ -1793,7 +1827,11 @@ msgid ""
 "You now want to give limited rights to Poweradmin so it can update the data "
 "in the tables. To do this, you should create a new user and give it rights "
 "to select, delete, insert, and update records in the PowerDNS database."
-msgstr "Teraz chcesz nadać ograniczone prawa Poweradminowi, aby mógł aktualizować dane w tabelach. W tym celu należy utworzyć nowego użytkownika i nadać mu prawa do wybierania, usuwania, wstawiania i aktualizowania rekordów w bazie danych PowerDNS."
+msgstr ""
+"Teraz chcesz nadać ograniczone prawa Poweradminowi, aby mógł aktualizować "
+"dane w tabelach. W tym celu należy utworzyć nowego użytkownika i nadać mu "
+"prawa do wybierania, usuwania, wstawiania i aktualizowania rekordów w bazie "
+"danych PowerDNS."
 
 #: install/templates/step6.html.twig:18
 msgid "Database Commands"
@@ -1816,7 +1854,9 @@ msgstr "Uwaga:"
 msgid ""
 "Since you are using SQLite, there is no need to create a new user with "
 "limited rights."
-msgstr "Ponieważ korzystasz z SQLite, nie ma potrzeby tworzenia nowego użytkownika z ograniczonymi uprawnieniami."
+msgstr ""
+"Ponieważ korzystasz z SQLite, nie ma potrzeby tworzenia nowego użytkownika z "
+"ograniczonymi uprawnieniami."
 
 #: install/templates/step5.html.twig:134 install/templates/step3.html.twig:56
 msgid "Continue to step"
@@ -1855,7 +1895,7 @@ msgid ""
 "Please select your preferred language to continue with the installation:"
 msgstr "Wybierz preferowany język, aby kontynuować instalację:"
 
-#: install/templates/step1.html.twig:196
+#: install/templates/step1.html.twig:209
 msgid "Begin Installation"
 msgstr "Begin Installation"
 
@@ -1875,7 +1915,10 @@ msgstr "Przygotowanie Bazy Danych:"
 msgid ""
 "The installer needs to modify the PowerDNS database with tables for "
 "Poweradmin. Use an account with sufficient rights (like root) to proceed."
-msgstr "Instalator musi zmodyfikować bazę danych PowerDNS, tworząc tabele dla Poweradmin. Użyj konta z wystarczającymi uprawnieniami (jak root), aby kontynuować."
+msgstr ""
+"Instalator musi zmodyfikować bazę danych PowerDNS, tworząc tabele dla "
+"Poweradmin. Użyj konta z wystarczającymi uprawnieniami (jak root), aby "
+"kontynuować."
 
 #: install/templates/step4.html.twig:20
 msgid "Database Settings"
@@ -1943,7 +1986,9 @@ msgstr "Pełna ścieżka do pliku bazy danych SQLite"
 
 #: install/templates/step4.html.twig:96
 msgid "File must exist with web server read/write access. Use absolute path."
-msgstr "Plik musi istnieć z dostępem do odczytu/zapisu dla serwera WWW. Użyj ścieżki bezwzględnej."
+msgstr ""
+"Plik musi istnieć z dostępem do odczytu/zapisu dla serwera WWW. Użyj ścieżki "
+"bezwzględnej."
 
 #: install/templates/step4.html.twig:104
 msgid "DB charset"
@@ -1955,7 +2000,9 @@ msgstr "Użyj domyślnego"
 
 #: install/templates/step4.html.twig:111
 msgid "Charset for new tables. Leave empty for database default."
-msgstr "Zestaw znaków dla nowych tabel. Pozostaw puste dla domyślnych ustawień bazy danych."
+msgstr ""
+"Zestaw znaków dla nowych tabel. Pozostaw puste dla domyślnych ustawień bazy "
+"danych."
 
 #: install/templates/step4.html.twig:116
 msgid "DB collation"
@@ -1964,7 +2011,9 @@ msgstr "Porównywanie DB"
 #: install/templates/step4.html.twig:123
 msgid ""
 "Collation rules for character comparison. Leave empty for database default."
-msgstr "Reguły porównywania znaków. Pozostaw puste dla domyślnych ustawień bazy danych."
+msgstr ""
+"Reguły porównywania znaków. Pozostaw puste dla domyślnych ustawień bazy "
+"danych."
 
 #: install/templates/step4.html.twig:131
 msgid "Administrator Account"
@@ -1981,7 +2030,9 @@ msgstr "Podaj hasło"
 #: install/templates/step4.html.twig:145
 msgid ""
 "Password for \"admin\" username with full rights to the Poweradmin interface."
-msgstr "Hasło dla nazwy użytkownika \"admin\" z pełnymi prawami do interfejsu Poweradmin."
+msgstr ""
+"Hasło dla nazwy użytkownika \"admin\" z pełnymi prawami do interfejsu "
+"Poweradmin."
 
 #: install/templates/step2.html.twig:3
 msgid "System Requirements"
@@ -1997,7 +2048,9 @@ msgstr "Sprawdzanie Wymagań:"
 
 #: install/templates/step2.html.twig:12
 msgid "Verifying that your server meets all requirements to run Poweradmin."
-msgstr "Weryfikacja, czy serwer spełnia wszystkie wymagania do uruchomienia Poweradmin."
+msgstr ""
+"Weryfikacja, czy serwer spełnia wszystkie wymagania do uruchomienia "
+"Poweradmin."
 
 #: install/templates/step2.html.twig:20
 msgid "PHP Version"
@@ -2070,7 +2123,9 @@ msgstr "Użytkownik bazy danych"
 #: install/templates/step5.html.twig:31
 msgid ""
 "Poweradmin database username with restricted access. Not for web UI login."
-msgstr "Nazwa użytkownika bazy danych Poweradmin z ograniczonym dostępem. Nie do logowania w interfejsie WWW."
+msgstr ""
+"Nazwa użytkownika bazy danych Poweradmin z ograniczonym dostępem. Nie do "
+"logowania w interfejsie WWW."
 
 #: install/templates/step5.html.twig:41
 msgid "Provide the user password"
@@ -2096,7 +2151,9 @@ msgstr "Podaj hostmaster DNS"
 msgid ""
 "When creating SOA records and no hostmaster is provided, this value here "
 "will be used."
-msgstr "Podczas tworzenia rekordów SOA, gdy nie podano hostmastera, zostanie użyta ta wartość."
+msgstr ""
+"Podczas tworzenia rekordów SOA, gdy nie podano hostmastera, zostanie użyta "
+"ta wartość."
 
 #: install/templates/step5.html.twig:70
 msgid "Primary nameserver"
@@ -2110,7 +2167,9 @@ msgstr "Podaj podstawowy serwer nazw"
 msgid ""
 "When creating new zones using the template, this value will be used as "
 "primary nameserver."
-msgstr "Podczas tworzenia nowych stref przy użyciu szablonu, ta wartość będzie używana jako główny serwer nazw."
+msgstr ""
+"Podczas tworzenia nowych stref przy użyciu szablonu, ta wartość będzie "
+"używana jako główny serwer nazw."
 
 #: install/templates/step5.html.twig:82
 msgid "Secondary nameserver"
@@ -2124,7 +2183,9 @@ msgstr "Podaj pomocniczy serwer nazw"
 msgid ""
 "When creating new zones using the template, this value will be used as "
 "secondary nameserver."
-msgstr "Podczas tworzenia nowych stref przy użyciu szablonu, ta wartość będzie używana jako drugorzędny serwer nazw."
+msgstr ""
+"Podczas tworzenia nowych stref przy użyciu szablonu, ta wartość będzie "
+"używana jako drugorzędny serwer nazw."
 
 #: install/templates/step5.html.twig:95
 msgid "Tertiary Nameserver"
@@ -2138,7 +2199,9 @@ msgstr "opcjonalny"
 msgid ""
 "When creating new zones using the template, this optional value will be used "
 "as tertiary nameserver."
-msgstr "Podczas tworzenia nowych stref przy użyciu szablonu, ta opcjonalna wartość będzie używana jako trzeciorzędny serwer nazw."
+msgstr ""
+"Podczas tworzenia nowych stref przy użyciu szablonu, ta opcjonalna wartość "
+"będzie używana jako trzeciorzędny serwer nazw."
 
 #: install/templates/step5.html.twig:108
 msgid "Quaternary Nameserver"
@@ -2148,7 +2211,9 @@ msgstr "Czwarty serwer nazw"
 msgid ""
 "When creating new zones using the template, this optional value will be used "
 "as quaternary nameserver."
-msgstr "Podczas tworzenia nowych stref przy użyciu szablonu, ta opcjonalna wartość będzie używana jako czwartorzędny serwer nazw."
+msgstr ""
+"Podczas tworzenia nowych stref przy użyciu szablonu, ta opcjonalna wartość "
+"będzie używana jako czwartorzędny serwer nazw."
 
 #: install/templates/step8.html.twig:3 install/templates/step8.html.twig:8
 msgid "Installation complete"
@@ -2178,7 +2243,9 @@ msgstr ""
 msgid ""
 "Poweradmin will not function if the install directory exists, as a security "
 "measure."
-msgstr "Poweradmin nie będzie działać, jeśli katalog instalacyjny istnieje, jako środek bezpieczeństwa."
+msgstr ""
+"Poweradmin nie będzie działać, jeśli katalog instalacyjny istnieje, jako "
+"środek bezpieczeństwa."
 
 #: install/templates/step8.html.twig:22
 msgid "Next Steps"
@@ -2220,7 +2287,10 @@ msgstr "O PowerDNS"
 msgid ""
 "PowerDNS is a DNS server that stores its data in an SQL database. Poweradmin "
 "will help you manage this database via a web interface."
-msgstr "PowerDNS to serwer DNS, który przechowuje swoje dane w bazie danych SQL. Poweradmin pomoże zarządzać tą bazą danych za pośrednictwem interfejsu internetowego."
+msgstr ""
+"PowerDNS to serwer DNS, który przechowuje swoje dane w bazie danych SQL. "
+"Poweradmin pomoże zarządzać tą bazą danych za pośrednictwem interfejsu "
+"internetowego."
 
 #: install/templates/step3.html.twig:21
 msgid "Before proceeding, you should have:"
@@ -2286,7 +2356,8 @@ msgstr "Make sure the SQLite database file exists"
 msgid ""
 "Check that the web server has read and write permissions for the database "
 "file"
-msgstr "Sprawdź, czy serwer WWW ma uprawnienia do odczytu i zapisu pliku bazy danych"
+msgstr ""
+"Sprawdź, czy serwer WWW ma uprawnienia do odczytu i zapisu pliku bazy danych"
 
 #: install/helpers/InstallStepHandler.php:187
 msgid "Verify the full path to the database file is correct and accessible"
@@ -2297,19 +2368,23 @@ msgstr "Verify the full path to the database file is correct and accessible"
 msgid ""
 "The SQLite database file %s does not exist. Please create the database file "
 "before proceeding."
-msgstr "Plik bazy danych SQLite %s nie istnieje. Utwórz plik bazy danych przed kontynuowaniem."
+msgstr ""
+"Plik bazy danych SQLite %s nie istnieje. Utwórz plik bazy danych przed "
+"kontynuowaniem."
 
 #: install/helpers/DatabaseHelper.php:96
 #, php-format
 msgid ""
 "The SQLite database file %s is not readable. Please check file permissions."
-msgstr "Plik bazy danych SQLite %s nie jest czytelny. Sprawdź uprawnienia pliku."
+msgstr ""
+"Plik bazy danych SQLite %s nie jest czytelny. Sprawdź uprawnienia pliku."
 
 #: install/helpers/DatabaseHelper.php:104
 #, php-format
 msgid ""
 "The SQLite database file %s is not writable. Please check file permissions."
-msgstr "Plik bazy danych SQLite %s nie jest zapisywalny. Sprawdź uprawnienia pliku."
+msgstr ""
+"Plik bazy danych SQLite %s nie jest zapisywalny. Sprawdź uprawnienia pliku."
 
 #: install/helpers/DatabaseHelper.php:116
 #, php-format
@@ -2324,5 +2399,8 @@ msgstr "or"
 msgid ""
 "No configuration file found. Please create the config/settings.php file "
 "before proceeding."
-msgstr "Nie znaleziono pliku konfiguracyjnego. Utwórz plik config/settings.php przed kontynuowaniem."
+msgstr ""
+"Nie znaleziono pliku konfiguracyjnego. Utwórz plik config/settings.php przed "
+"kontynuowaniem."
+
 
