--- a/locale/ru_RU/LC_MESSAGES/messages.po
+++ b/locale/ru_RU/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
 "Report-Msgid-Bugs-To: edmondas@girkantas.lt\n"
-"POT-Creation-Date: 2025-04-11 18:23+0300\n"
+"POT-Creation-Date: 2025-04-11 19:26+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,7 +44,9 @@ msgstr ""
 msgid ""
 "Default session encryption key is used, please set it in your configuration "
 "file."
-msgstr "Используется ключ шифрования сессии по умолчанию, установите его в вашем конфигурационном файле."
+msgstr ""
+"Используется ключ шифрования сессии по умолчанию, установите его в вашем "
+"конфигурационном файле."
 
 #: lib/Application/Presenter/PaginationPresenter.php:52
 #: templates/search.html:135 templates/search.html:252
@@ -104,7 +106,9 @@ msgstr "The record has been deleted successfully."
 msgid ""
 "The record was deleted but the comment was preserved because similar records "
 "exist."
-msgstr "Запись была удалена, но комментарий сохранен, так как существуют похожие записи."
+msgstr ""
+"Запись была удалена, но комментарий сохранен, так как существуют похожие "
+"записи."
 
 #: lib/Domain/Model/ZoneTemplate.php:398 lib/Domain/Service/DnsRecord.php:393
 msgid "You do not have the permission to edit this record."
@@ -271,13 +275,18 @@ msgstr "You do not have the permission to access the migrations."
 msgid ""
 "Old migrations table detected. Please remove the `migrations` table before "
 "proceeding."
-msgstr "Обнаружена старая таблица миграций. Пожалуйста, удалите таблицу `migrations` перед продолжением."
+msgstr ""
+"Обнаружена старая таблица миграций. Пожалуйста, удалите таблицу `migrations` "
+"перед продолжением."
 
 #: lib/Application/Controller/MigrationsController.php:49
 msgid ""
 "Database access check failed. Please ensure the current database user has "
 "the necessary permissions to create and alter tables."
-msgstr "Проверка доступа к базе данных не удалась. Убедитесь, что текущий пользователь базы данных имеет необходимые разрешения для создания и изменения таблиц."
+msgstr ""
+"Проверка доступа к базе данных не удалась. Убедитесь, что текущий "
+"пользователь базы данных имеет необходимые разрешения для создания и "
+"изменения таблиц."
 
 #: lib/Domain/Service/DnsRecord.php:795
 msgid "You do not have the permission to add a master zone."
@@ -403,7 +412,9 @@ msgstr "The record has been updated successfully."
 msgid ""
 "LDAP users cannot change their password here. Please contact your "
 "administrator."
-msgstr "Пользователи LDAP не могут изменить свой пароль здесь. Обратитесь к вашему администратору."
+msgstr ""
+"Пользователи LDAP не могут изменить свой пароль здесь. Обратитесь к вашему "
+"администратору."
 
 #: lib/Application/Controller/DnssecAddKeyController.php:101
 msgid "Zone key has been added successfully."
@@ -511,7 +522,9 @@ msgstr "An empty password is not allowed"
 msgid ""
 "Failed to call function exec. Make sure that exec is not listed in "
 "disable_functions at php.ini"
-msgstr "Не удалось вызвать функцию exec. Убедитесь, что exec не указан в disable_functions в php.ini"
+msgstr ""
+"Не удалось вызвать функцию exec. Убедитесь, что exec не указан в "
+"disable_functions в php.ini"
 
 #: lib/Infrastructure/Service/PdnsUtilProvider.php:56
 msgid "Failed to call pdnssec utility."
@@ -620,7 +633,8 @@ msgstr "Add quotes around TXT record content."
 #: lib/Domain/Service/Dns.php:607
 msgid ""
 "This is not a valid CNAME. Did you assign an MX or NS record to the record?"
-msgstr "Это не действительный CNAME. Вы присвоили запись MX или NS этой записи?"
+msgstr ""
+"Это не действительный CNAME. Вы присвоили запись MX или NS этой записи?"
 
 #: lib/Domain/Service/Dns.php:636
 msgid ""
@@ -640,7 +654,9 @@ msgstr "Empty CNAME records are not allowed."
 msgid ""
 "You can not point a NS or MX record to a CNAME record. Remove or rename the "
 "CNAME record first, or take another name."
-msgstr "Вы не можете указать запись NS или MX на запись CNAME. Сначала удалите или переименуйте запись CNAME, или используйте другое имя."
+msgstr ""
+"Вы не можете указать запись NS или MX на запись CNAME. Сначала удалите или "
+"переименуйте запись CNAME, или используйте другое имя."
 
 #: lib/Domain/Service/Dns.php:735
 msgid "Invalid value for content field of HINFO record."
@@ -726,7 +742,9 @@ msgstr "There is already a supermaster with this IP address and hostname."
 msgid ""
 "You are trying to delete the SOA record. You are not allowed to remove it, "
 "unless you remove the entire zone."
-msgstr "Вы пытаетесь удалить запись SOA. Вам не разрешено удалять ее, если только вы не удалите всю зону."
+msgstr ""
+"Вы пытаетесь удалить запись SOA. Вам не разрешено удалять ее, если только вы "
+"не удалите всю зону."
 
 #: lib/Domain/Service/DnsRecord.php:790 lib/Domain/Service/DnsRecord.php:1404
 #, php-format
@@ -1017,7 +1035,9 @@ msgstr "Delete user"
 msgid ""
 "You are about to delete a user. This user is owner for a number of zones. "
 "Please decide what to do with these zones."
-msgstr "Вы собираетесь удалить пользователя. Этот пользователь является владельцем нескольких зон. Пожалуйста, решите, что делать с этими зонами."
+msgstr ""
+"Вы собираетесь удалить пользователя. Этот пользователь является владельцем "
+"нескольких зон. Пожалуйста, решите, что делать с этими зонами."
 
 #: templates/delete_user.html:22
 msgid "Zone"
@@ -1313,7 +1333,9 @@ msgstr "Examples:"
 msgid ""
 "To add a subdomain foo in a zone template you would put foo.[ZONE] into the "
 "name field."
-msgstr "Чтобы добавить поддомен foo в шаблон зоны, вы должны поместить foo.[ZONE] в поле имени."
+msgstr ""
+"Чтобы добавить поддомен foo в шаблон зоны, вы должны поместить foo.[ZONE] в "
+"поле имени."
 
 #: templates/add_zone_templ_record.html:78 templates/edit_zone_templ.html:94
 msgid "To add a wildcard record put *.[ZONE] in the name field."
@@ -1327,7 +1349,9 @@ msgstr "Use just [ZONE] to have the domain itself return a value."
 msgid ""
 "For the SOA record, place [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 "
 "86400 in the content field."
-msgstr "Для записи SOA поместите [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 в поле содержимого."
+msgstr ""
+"Для записи SOA поместите [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 "
+"в поле содержимого."
 
 #: templates/delete_perm_templ.html:10
 msgid "Delete permission template"
@@ -1559,14 +1583,21 @@ msgid ""
 "supermaster. Deleting the zone now, will result in temporary removal only. "
 "Whenever the supermaster sends a notification for this zone, it will be "
 "added again!"
-msgstr "Вы собираетесь удалить вторичную зону, основной сервер имен которой является супермастером. Удаление зоны сейчас приведет только к временному удалению. Всякий раз, когда супермастер отправляет уведомление для этой зоны, она будет добавлена снова!"
+msgstr ""
+"Вы собираетесь удалить вторичную зону, основной сервер имен которой является "
+"супермастером. Удаление зоны сейчас приведет только к временному удалению. "
+"Всякий раз, когда супермастер отправляет уведомление для этой зоны, она "
+"будет добавлена снова!"
 
 #: templates/search.html:9
 msgid ""
 "Enter a hostname or IP address. SQL LIKE syntax supported: an underscore (_) "
 "in pattern matches any single character, a percent sign (%) matches any "
 "string of zero or more characters."
-msgstr "Введите имя хоста или IP-адрес. Поддерживается синтаксис SQL LIKE: подчеркивание (_) в шаблоне соответствует любому одиночному символу, знак процента (%) соответствует любой строке из нуля или более символов."
+msgstr ""
+"Введите имя хоста или IP-адрес. Поддерживается синтаксис SQL LIKE: "
+"подчеркивание (_) в шаблоне соответствует любому одиночному символу, знак "
+"процента (%) соответствует любой строке из нуля или более символов."
 
 #: templates/search.html:27
 msgid "Provide a keyword for your search"
@@ -1793,7 +1824,11 @@ msgid ""
 "You now want to give limited rights to Poweradmin so it can update the data "
 "in the tables. To do this, you should create a new user and give it rights "
 "to select, delete, insert, and update records in the PowerDNS database."
-msgstr "Теперь вы хотите предоставить ограниченные права Poweradmin, чтобы он мог обновлять данные в таблицах. Для этого вам следует создать нового пользователя и предоставить ему права на выбор, удаление, вставку и обновление записей в базе данных PowerDNS."
+msgstr ""
+"Теперь вы хотите предоставить ограниченные права Poweradmin, чтобы он мог "
+"обновлять данные в таблицах. Для этого вам следует создать нового "
+"пользователя и предоставить ему права на выбор, удаление, вставку и "
+"обновление записей в базе данных PowerDNS."
 
 #: install/templates/step6.html.twig:18
 msgid "Database Commands"
@@ -1806,7 +1841,8 @@ msgstr "Выполните следующие команды в зависимо
 #: install/templates/step6.html.twig:26
 msgid ""
 "After you have added the new user, proceed with this installation procedure."
-msgstr "После добавления нового пользователя продолжите эту процедуру установки."
+msgstr ""
+"После добавления нового пользователя продолжите эту процедуру установки."
 
 #: install/templates/step3.html.twig:44
 msgid "Note:"
@@ -1816,7 +1852,9 @@ msgstr "Примечание:"
 msgid ""
 "Since you are using SQLite, there is no need to create a new user with "
 "limited rights."
-msgstr "Поскольку вы используете SQLite, нет необходимости создавать нового пользователя с ограниченными правами."
+msgstr ""
+"Поскольку вы используете SQLite, нет необходимости создавать нового "
+"пользователя с ограниченными правами."
 
 #: install/templates/step5.html.twig:134 install/templates/step3.html.twig:56
 msgid "Continue to step"
@@ -1855,7 +1893,7 @@ msgid ""
 "Please select your preferred language to continue with the installation:"
 msgstr "Выберите предпочтительный язык для продолжения установки:"
 
-#: install/templates/step1.html.twig:196
+#: install/templates/step1.html.twig:209
 msgid "Begin Installation"
 msgstr "Begin Installation"
 
@@ -1875,7 +1913,10 @@ msgstr "Подготовка базы данных:"
 msgid ""
 "The installer needs to modify the PowerDNS database with tables for "
 "Poweradmin. Use an account with sufficient rights (like root) to proceed."
-msgstr "Установщику необходимо изменить базу данных PowerDNS, добавив таблицы для Poweradmin. Используйте учетную запись с достаточными правами (например, root) для продолжения."
+msgstr ""
+"Установщику необходимо изменить базу данных PowerDNS, добавив таблицы для "
+"Poweradmin. Используйте учетную запись с достаточными правами (например, "
+"root) для продолжения."
 
 #: install/templates/step4.html.twig:20
 msgid "Database Settings"
@@ -1943,7 +1984,9 @@ msgstr "Полный путь к файлу базы данных SQLite"
 
 #: install/templates/step4.html.twig:96
 msgid "File must exist with web server read/write access. Use absolute path."
-msgstr "Файл должен существовать с доступом на чтение/запись для веб-сервера. Используйте абсолютный путь."
+msgstr ""
+"Файл должен существовать с доступом на чтение/запись для веб-сервера. "
+"Используйте абсолютный путь."
 
 #: install/templates/step4.html.twig:104
 msgid "DB charset"
@@ -1955,7 +1998,9 @@ msgstr "Использовать по умолчанию"
 
 #: install/templates/step4.html.twig:111
 msgid "Charset for new tables. Leave empty for database default."
-msgstr "Кодировка для новых таблиц. Оставьте пустым для значения по умолчанию базы данных."
+msgstr ""
+"Кодировка для новых таблиц. Оставьте пустым для значения по умолчанию базы "
+"данных."
 
 #: install/templates/step4.html.twig:116
 msgid "DB collation"
@@ -1964,7 +2009,9 @@ msgstr "Сопоставление БД"
 #: install/templates/step4.html.twig:123
 msgid ""
 "Collation rules for character comparison. Leave empty for database default."
-msgstr "Правила сравнения символов. Оставьте пустым для значения по умолчанию базы данных."
+msgstr ""
+"Правила сравнения символов. Оставьте пустым для значения по умолчанию базы "
+"данных."
 
 #: install/templates/step4.html.twig:131
 msgid "Administrator Account"
@@ -1981,7 +2028,9 @@ msgstr "Укажите пароль"
 #: install/templates/step4.html.twig:145
 msgid ""
 "Password for \"admin\" username with full rights to the Poweradmin interface."
-msgstr "Пароль для имени пользователя \"admin\" с полными правами доступа к интерфейсу Poweradmin."
+msgstr ""
+"Пароль для имени пользователя \"admin\" с полными правами доступа к "
+"интерфейсу Poweradmin."
 
 #: install/templates/step2.html.twig:3
 msgid "System Requirements"
@@ -1997,7 +2046,8 @@ msgstr "Проверка Требований:"
 
 #: install/templates/step2.html.twig:12
 msgid "Verifying that your server meets all requirements to run Poweradmin."
-msgstr "Проверка соответствия вашего сервера всем требованиям для запуска Poweradmin."
+msgstr ""
+"Проверка соответствия вашего сервера всем требованиям для запуска Poweradmin."
 
 #: install/templates/step2.html.twig:20
 msgid "PHP Version"
@@ -2070,7 +2120,9 @@ msgstr "Пользователь базы данных"
 #: install/templates/step5.html.twig:31
 msgid ""
 "Poweradmin database username with restricted access. Not for web UI login."
-msgstr "Имя пользователя базы данных Poweradmin с ограниченным доступом. Не для входа в веб-интерфейс."
+msgstr ""
+"Имя пользователя базы данных Poweradmin с ограниченным доступом. Не для "
+"входа в веб-интерфейс."
 
 #: install/templates/step5.html.twig:41
 msgid "Provide the user password"
@@ -2096,7 +2148,9 @@ msgstr "Укажите администратора хоста DNS"
 msgid ""
 "When creating SOA records and no hostmaster is provided, this value here "
 "will be used."
-msgstr "При создании записей SOA, если не указан hostmaster, будет использоваться это значение."
+msgstr ""
+"При создании записей SOA, если не указан hostmaster, будет использоваться "
+"это значение."
 
 #: install/templates/step5.html.twig:70
 msgid "Primary nameserver"
@@ -2110,7 +2164,9 @@ msgstr "Укажите основной сервер имен"
 msgid ""
 "When creating new zones using the template, this value will be used as "
 "primary nameserver."
-msgstr "При создании новых зон с использованием шаблона это значение будет использоваться как основной сервер имен."
+msgstr ""
+"При создании новых зон с использованием шаблона это значение будет "
+"использоваться как основной сервер имен."
 
 #: install/templates/step5.html.twig:82
 msgid "Secondary nameserver"
@@ -2124,7 +2180,9 @@ msgstr "Укажите вторичный сервер имен"
 msgid ""
 "When creating new zones using the template, this value will be used as "
 "secondary nameserver."
-msgstr "При создании новых зон с использованием шаблона это значение будет использоваться как вторичный сервер имен."
+msgstr ""
+"При создании новых зон с использованием шаблона это значение будет "
+"использоваться как вторичный сервер имен."
 
 #: install/templates/step5.html.twig:95
 msgid "Tertiary Nameserver"
@@ -2138,7 +2196,9 @@ msgstr "необязательно"
 msgid ""
 "When creating new zones using the template, this optional value will be used "
 "as tertiary nameserver."
-msgstr "При создании новых зон с использованием шаблона это необязательное значение будет использоваться как третичный сервер имен."
+msgstr ""
+"При создании новых зон с использованием шаблона это необязательное значение "
+"будет использоваться как третичный сервер имен."
 
 #: install/templates/step5.html.twig:108
 msgid "Quaternary Nameserver"
@@ -2148,7 +2208,9 @@ msgstr "Четвертичный сервер имен"
 msgid ""
 "When creating new zones using the template, this optional value will be used "
 "as quaternary nameserver."
-msgstr "При создании новых зон с использованием шаблона это необязательное значение будет использоваться как четвертичный сервер имен."
+msgstr ""
+"При создании новых зон с использованием шаблона это необязательное значение "
+"будет использоваться как четвертичный сервер имен."
 
 #: install/templates/step8.html.twig:3 install/templates/step8.html.twig:8
 msgid "Installation complete"
@@ -2178,7 +2240,9 @@ msgstr ""
 msgid ""
 "Poweradmin will not function if the install directory exists, as a security "
 "measure."
-msgstr "Poweradmin не будет работать, если существует каталог установки, в качестве меры безопасности."
+msgstr ""
+"Poweradmin не будет работать, если существует каталог установки, в качестве "
+"меры безопасности."
 
 #: install/templates/step8.html.twig:22
 msgid "Next Steps"
@@ -2220,7 +2284,9 @@ msgstr "О PowerDNS"
 msgid ""
 "PowerDNS is a DNS server that stores its data in an SQL database. Poweradmin "
 "will help you manage this database via a web interface."
-msgstr "PowerDNS - это DNS-сервер, который хранит свои данные в SQL-базе данных. Poweradmin поможет вам управлять этой базой данных через веб-интерфейс."
+msgstr ""
+"PowerDNS - это DNS-сервер, который хранит свои данные в SQL-базе данных. "
+"Poweradmin поможет вам управлять этой базой данных через веб-интерфейс."
 
 #: install/templates/step3.html.twig:21
 msgid "Before proceeding, you should have:"
@@ -2286,7 +2352,9 @@ msgstr "Make sure the SQLite database file exists"
 msgid ""
 "Check that the web server has read and write permissions for the database "
 "file"
-msgstr "Проверьте, что веб-сервер имеет права на чтение и запись для файла базы данных"
+msgstr ""
+"Проверьте, что веб-сервер имеет права на чтение и запись для файла базы "
+"данных"
 
 #: install/helpers/InstallStepHandler.php:187
 msgid "Verify the full path to the database file is correct and accessible"
@@ -2297,7 +2365,9 @@ msgstr "Verify the full path to the database file is correct and accessible"
 msgid ""
 "The SQLite database file %s does not exist. Please create the database file "
 "before proceeding."
-msgstr "Файл базы данных SQLite %s не существует. Пожалуйста, создайте файл базы данных перед продолжением."
+msgstr ""
+"Файл базы данных SQLite %s не существует. Пожалуйста, создайте файл базы "
+"данных перед продолжением."
 
 #: install/helpers/DatabaseHelper.php:96
 #, php-format
@@ -2309,7 +2379,9 @@ msgstr "Файл базы данных SQLite %s не читается. Пров
 #, php-format
 msgid ""
 "The SQLite database file %s is not writable. Please check file permissions."
-msgstr "Файл базы данных SQLite %s не доступен для записи. Проверьте разрешения файла."
+msgstr ""
+"Файл базы данных SQLite %s не доступен для записи. Проверьте разрешения "
+"файла."
 
 #: install/helpers/DatabaseHelper.php:116
 #, php-format
@@ -2324,5 +2396,8 @@ msgstr "or"
 msgid ""
 "No configuration file found. Please create the config/settings.php file "
 "before proceeding."
-msgstr "Конфигурационный файл не найден. Пожалуйста, создайте файл config/settings.php перед продолжением."
+msgstr ""
+"Конфигурационный файл не найден. Пожалуйста, создайте файл config/"
+"settings.php перед продолжением."
+
 
