--- a/locale/tr_TR/LC_MESSAGES/messages.po
+++ b/locale/tr_TR/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Poweradmin 4.0.0\n"
 "Report-Msgid-Bugs-To: edmondas@girkantas.lt\n"
-"POT-Creation-Date: 2025-04-11 18:23+0300\n"
+"POT-Creation-Date: 2025-04-11 19:26+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -44,7 +44,9 @@ msgstr ""
 msgid ""
 "Default session encryption key is used, please set it in your configuration "
 "file."
-msgstr "Varsayılan oturum şifreleme anahtarı kullanılıyor, lütfen yapılandırma dosyanızda ayarlayın."
+msgstr ""
+"Varsayılan oturum şifreleme anahtarı kullanılıyor, lütfen yapılandırma "
+"dosyanızda ayarlayın."
 
 #: lib/Application/Presenter/PaginationPresenter.php:52
 #: templates/search.html:135 templates/search.html:252
@@ -271,13 +273,18 @@ msgstr "You do not have the permission to access the migrations."
 msgid ""
 "Old migrations table detected. Please remove the `migrations` table before "
 "proceeding."
-msgstr "Eski göç tablosu tespit edildi. Devam etmeden önce lütfen `migrations` tablosunu kaldırın."
+msgstr ""
+"Eski göç tablosu tespit edildi. Devam etmeden önce lütfen `migrations` "
+"tablosunu kaldırın."
 
 #: lib/Application/Controller/MigrationsController.php:49
 msgid ""
 "Database access check failed. Please ensure the current database user has "
 "the necessary permissions to create and alter tables."
-msgstr "Veritabanı erişim kontrolü başarısız oldu. Lütfen mevcut veritabanı kullanıcısının tablo oluşturma ve değiştirme için gerekli izinlere sahip olduğundan emin olun."
+msgstr ""
+"Veritabanı erişim kontrolü başarısız oldu. Lütfen mevcut veritabanı "
+"kullanıcısının tablo oluşturma ve değiştirme için gerekli izinlere sahip "
+"olduğundan emin olun."
 
 #: lib/Domain/Service/DnsRecord.php:795
 msgid "You do not have the permission to add a master zone."
@@ -403,7 +410,9 @@ msgstr "The record has been updated successfully."
 msgid ""
 "LDAP users cannot change their password here. Please contact your "
 "administrator."
-msgstr "LDAP kullanıcıları şifrelerini burada değiştiremez. Lütfen yöneticinize başvurun."
+msgstr ""
+"LDAP kullanıcıları şifrelerini burada değiştiremez. Lütfen yöneticinize "
+"başvurun."
 
 #: lib/Application/Controller/DnssecAddKeyController.php:101
 msgid "Zone key has been added successfully."
@@ -511,7 +520,9 @@ msgstr "An empty password is not allowed"
 msgid ""
 "Failed to call function exec. Make sure that exec is not listed in "
 "disable_functions at php.ini"
-msgstr "Exec fonksiyonunu çağırma başarısız oldu. Exec'in php.ini'deki disable_functions'da listelenmediğinden emin olun."
+msgstr ""
+"Exec fonksiyonunu çağırma başarısız oldu. Exec'in php.ini'deki "
+"disable_functions'da listelenmediğinden emin olun."
 
 #: lib/Infrastructure/Service/PdnsUtilProvider.php:56
 msgid "Failed to call pdnssec utility."
@@ -640,7 +651,9 @@ msgstr "Empty CNAME records are not allowed."
 msgid ""
 "You can not point a NS or MX record to a CNAME record. Remove or rename the "
 "CNAME record first, or take another name."
-msgstr "Bir NS veya MX kaydını bir CNAME kaydına yönlendiremezsiniz. Önce CNAME kaydını kaldırın veya yeniden adlandırın, ya da başka bir isim alın."
+msgstr ""
+"Bir NS veya MX kaydını bir CNAME kaydına yönlendiremezsiniz. Önce CNAME "
+"kaydını kaldırın veya yeniden adlandırın, ya da başka bir isim alın."
 
 #: lib/Domain/Service/Dns.php:735
 msgid "Invalid value for content field of HINFO record."
@@ -726,7 +739,9 @@ msgstr "There is already a supermaster with this IP address and hostname."
 msgid ""
 "You are trying to delete the SOA record. You are not allowed to remove it, "
 "unless you remove the entire zone."
-msgstr "SOA kaydını silmeye çalışıyorsunuz. Tüm bölgeyi kaldırmadığınız sürece bunu kaldırmanıza izin verilmiyor."
+msgstr ""
+"SOA kaydını silmeye çalışıyorsunuz. Tüm bölgeyi kaldırmadığınız sürece bunu "
+"kaldırmanıza izin verilmiyor."
 
 #: lib/Domain/Service/DnsRecord.php:790 lib/Domain/Service/DnsRecord.php:1404
 #, php-format
@@ -1017,7 +1032,9 @@ msgstr "Delete user"
 msgid ""
 "You are about to delete a user. This user is owner for a number of zones. "
 "Please decide what to do with these zones."
-msgstr "Bir kullanıcıyı silmek üzeresiniz. Bu kullanıcı bir dizi bölgenin sahibidir. Lütfen bu bölgelerle ne yapacağınıza karar verin."
+msgstr ""
+"Bir kullanıcıyı silmek üzeresiniz. Bu kullanıcı bir dizi bölgenin sahibidir. "
+"Lütfen bu bölgelerle ne yapacağınıza karar verin."
 
 #: templates/delete_user.html:22
 msgid "Zone"
@@ -1313,7 +1330,9 @@ msgstr "Examples:"
 msgid ""
 "To add a subdomain foo in a zone template you would put foo.[ZONE] into the "
 "name field."
-msgstr "Bir bölge şablonuna foo alt alanı eklemek için ad alanına foo.[ZONE] koymanız gerekir."
+msgstr ""
+"Bir bölge şablonuna foo alt alanı eklemek için ad alanına foo.[ZONE] "
+"koymanız gerekir."
 
 #: templates/add_zone_templ_record.html:78 templates/edit_zone_templ.html:94
 msgid "To add a wildcard record put *.[ZONE] in the name field."
@@ -1327,7 +1346,9 @@ msgstr "Use just [ZONE] to have the domain itself return a value."
 msgid ""
 "For the SOA record, place [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 "
 "86400 in the content field."
-msgstr "SOA kaydı için içerik alanına [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 yerleştirin."
+msgstr ""
+"SOA kaydı için içerik alanına [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 "
+"86400 yerleştirin."
 
 #: templates/delete_perm_templ.html:10
 msgid "Delete permission template"
@@ -1435,7 +1456,8 @@ msgstr "Delete record in zone"
 
 #: templates/delete_record.html:47
 msgid "You are trying to delete a record that is needed for this zone to work."
-msgstr "Bu bölgenin çalışması için gerekli olan bir kaydı silmeye çalışıyorsunuz."
+msgstr ""
+"Bu bölgenin çalışması için gerekli olan bir kaydı silmeye çalışıyorsunuz."
 
 #: templates/add_user.html:60 install/templates/step4.html.twig:54
 msgid "Provide user password"
@@ -1559,14 +1581,21 @@ msgid ""
 "supermaster. Deleting the zone now, will result in temporary removal only. "
 "Whenever the supermaster sends a notification for this zone, it will be "
 "added again!"
-msgstr "Ana ad sunucusunun bir supermaster olduğu bir slave bölgeyi silmek üzeresiniz. Bölgeyi şimdi silmek sadece geçici bir kaldırma ile sonuçlanacaktır. Supermaster bu bölge için bir bildirim gönderdiğinde, tekrar eklenecektir!"
+msgstr ""
+"Ana ad sunucusunun bir supermaster olduğu bir slave bölgeyi silmek "
+"üzeresiniz. Bölgeyi şimdi silmek sadece geçici bir kaldırma ile "
+"sonuçlanacaktır. Supermaster bu bölge için bir bildirim gönderdiğinde, "
+"tekrar eklenecektir!"
 
 #: templates/search.html:9
 msgid ""
 "Enter a hostname or IP address. SQL LIKE syntax supported: an underscore (_) "
 "in pattern matches any single character, a percent sign (%) matches any "
 "string of zero or more characters."
-msgstr "Bir ana bilgisayar adı veya IP adresi girin. SQL LIKE sözdizimi desteklenir: Desende bir alt çizgi (_) herhangi bir tek karaktere, bir yüzde işareti (%) sıfır veya daha fazla karakterden oluşan herhangi bir diziye eşleşir."
+msgstr ""
+"Bir ana bilgisayar adı veya IP adresi girin. SQL LIKE sözdizimi desteklenir: "
+"Desende bir alt çizgi (_) herhangi bir tek karaktere, bir yüzde işareti (%) "
+"sıfır veya daha fazla karakterden oluşan herhangi bir diziye eşleşir."
 
 #: templates/search.html:27
 msgid "Provide a keyword for your search"
@@ -1793,7 +1822,11 @@ msgid ""
 "You now want to give limited rights to Poweradmin so it can update the data "
 "in the tables. To do this, you should create a new user and give it rights "
 "to select, delete, insert, and update records in the PowerDNS database."
-msgstr "Şimdi Poweradmin'e tablolardaki verileri güncelleyebilmesi için sınırlı haklar vermek istiyorsunuz. Bunun için, yeni bir kullanıcı oluşturmalı ve ona PowerDNS veritabanındaki kayıtları seçme, silme, ekleme ve güncelleme hakları vermelisiniz."
+msgstr ""
+"Şimdi Poweradmin'e tablolardaki verileri güncelleyebilmesi için sınırlı "
+"haklar vermek istiyorsunuz. Bunun için, yeni bir kullanıcı oluşturmalı ve "
+"ona PowerDNS veritabanındaki kayıtları seçme, silme, ekleme ve güncelleme "
+"hakları vermelisiniz."
 
 #: install/templates/step6.html.twig:18
 msgid "Database Commands"
@@ -1816,7 +1849,9 @@ msgstr "Not:"
 msgid ""
 "Since you are using SQLite, there is no need to create a new user with "
 "limited rights."
-msgstr "SQLite kullandığınız için, sınırlı haklara sahip yeni bir kullanıcı oluşturmanıza gerek yoktur."
+msgstr ""
+"SQLite kullandığınız için, sınırlı haklara sahip yeni bir kullanıcı "
+"oluşturmanıza gerek yoktur."
 
 #: install/templates/step5.html.twig:134 install/templates/step3.html.twig:56
 msgid "Continue to step"
@@ -1855,7 +1890,7 @@ msgid ""
 "Please select your preferred language to continue with the installation:"
 msgstr "Kuruluma devam etmek için lütfen tercih ettiğiniz dili seçin:"
 
-#: install/templates/step1.html.twig:196
+#: install/templates/step1.html.twig:209
 msgid "Begin Installation"
 msgstr "Begin Installation"
 
@@ -1875,7 +1910,10 @@ msgstr "Veritabanı Hazırlığı:"
 msgid ""
 "The installer needs to modify the PowerDNS database with tables for "
 "Poweradmin. Use an account with sufficient rights (like root) to proceed."
-msgstr "Yükleyici, Poweradmin için tablolarla PowerDNS veritabanını değiştirmesi gerekiyor. Devam etmek için yeterli haklara sahip bir hesap kullanın (root gibi)."
+msgstr ""
+"Yükleyici, Poweradmin için tablolarla PowerDNS veritabanını değiştirmesi "
+"gerekiyor. Devam etmek için yeterli haklara sahip bir hesap kullanın (root "
+"gibi)."
 
 #: install/templates/step4.html.twig:20
 msgid "Database Settings"
@@ -1943,7 +1981,9 @@ msgstr "SQLite veritabanı dosyasının tam yolu"
 
 #: install/templates/step4.html.twig:96
 msgid "File must exist with web server read/write access. Use absolute path."
-msgstr "Dosya, web sunucusu okuma/yazma erişimiyle var olmalıdır. Mutlak yol kullanın."
+msgstr ""
+"Dosya, web sunucusu okuma/yazma erişimiyle var olmalıdır. Mutlak yol "
+"kullanın."
 
 #: install/templates/step4.html.twig:104
 msgid "DB charset"
@@ -1955,7 +1995,8 @@ msgstr "Varsayılanı kullan"
 
 #: install/templates/step4.html.twig:111
 msgid "Charset for new tables. Leave empty for database default."
-msgstr "Yeni tablolar için karakter seti. Veritabanı varsayılanı için boş bırakın."
+msgstr ""
+"Yeni tablolar için karakter seti. Veritabanı varsayılanı için boş bırakın."
 
 #: install/templates/step4.html.twig:116
 msgid "DB collation"
@@ -1964,7 +2005,9 @@ msgstr "DB karşılaştırması"
 #: install/templates/step4.html.twig:123
 msgid ""
 "Collation rules for character comparison. Leave empty for database default."
-msgstr "Karakter karşılaştırması için harmanlama kuralları. Veritabanı varsayılanı için boş bırakın."
+msgstr ""
+"Karakter karşılaştırması için harmanlama kuralları. Veritabanı varsayılanı "
+"için boş bırakın."
 
 #: install/templates/step4.html.twig:131
 msgid "Administrator Account"
@@ -1981,7 +2024,9 @@ msgstr "Bir şifre girin"
 #: install/templates/step4.html.twig:145
 msgid ""
 "Password for \"admin\" username with full rights to the Poweradmin interface."
-msgstr "Poweradmin arayüzüne tam erişim hakkına sahip \"admin\" kullanıcı adı için şifre."
+msgstr ""
+"Poweradmin arayüzüne tam erişim hakkına sahip \"admin\" kullanıcı adı için "
+"şifre."
 
 #: install/templates/step2.html.twig:3
 msgid "System Requirements"
@@ -1997,7 +2042,9 @@ msgstr "Gereksinim Kontrolü:"
 
 #: install/templates/step2.html.twig:12
 msgid "Verifying that your server meets all requirements to run Poweradmin."
-msgstr "Sunucunuzun Poweradmin'i çalıştırmak için tüm gereksinimleri karşıladığı doğrulanıyor."
+msgstr ""
+"Sunucunuzun Poweradmin'i çalıştırmak için tüm gereksinimleri karşıladığı "
+"doğrulanıyor."
 
 #: install/templates/step2.html.twig:20
 msgid "PHP Version"
@@ -2070,7 +2117,9 @@ msgstr "Veritabanı Kullanıcısı"
 #: install/templates/step5.html.twig:31
 msgid ""
 "Poweradmin database username with restricted access. Not for web UI login."
-msgstr "Sınırlı erişime sahip Poweradmin veritabanı kullanıcı adı. Web kullanıcı arayüzü girişi için değil."
+msgstr ""
+"Sınırlı erişime sahip Poweradmin veritabanı kullanıcı adı. Web kullanıcı "
+"arayüzü girişi için değil."
 
 #: install/templates/step5.html.twig:41
 msgid "Provide the user password"
@@ -2096,7 +2145,9 @@ msgstr "DNS hostmaster'ı girin"
 msgid ""
 "When creating SOA records and no hostmaster is provided, this value here "
 "will be used."
-msgstr "SOA kayıtları oluşturulurken ve hostmaster sağlanmadığında, buradaki değer kullanılacaktır."
+msgstr ""
+"SOA kayıtları oluşturulurken ve hostmaster sağlanmadığında, buradaki değer "
+"kullanılacaktır."
 
 #: install/templates/step5.html.twig:70
 msgid "Primary nameserver"
@@ -2110,7 +2161,9 @@ msgstr "Birincil ad sunucusunu girin"
 msgid ""
 "When creating new zones using the template, this value will be used as "
 "primary nameserver."
-msgstr "Şablonu kullanarak yeni bölgeler oluşturulduğunda, bu değer birincil ad sunucusu olarak kullanılacaktır."
+msgstr ""
+"Şablonu kullanarak yeni bölgeler oluşturulduğunda, bu değer birincil ad "
+"sunucusu olarak kullanılacaktır."
 
 #: install/templates/step5.html.twig:82
 msgid "Secondary nameserver"
@@ -2124,7 +2177,9 @@ msgstr "İkincil ad sunucusunu girin"
 msgid ""
 "When creating new zones using the template, this value will be used as "
 "secondary nameserver."
-msgstr "Şablonu kullanarak yeni bölgeler oluşturulduğunda, bu değer ikincil ad sunucusu olarak kullanılacaktır."
+msgstr ""
+"Şablonu kullanarak yeni bölgeler oluşturulduğunda, bu değer ikincil ad "
+"sunucusu olarak kullanılacaktır."
 
 #: install/templates/step5.html.twig:95
 msgid "Tertiary Nameserver"
@@ -2138,7 +2193,9 @@ msgstr "isteğe bağlı"
 msgid ""
 "When creating new zones using the template, this optional value will be used "
 "as tertiary nameserver."
-msgstr "Şablonu kullanarak yeni bölgeler oluşturulduğunda, bu isteğe bağlı değer üçüncü ad sunucusu olarak kullanılacaktır."
+msgstr ""
+"Şablonu kullanarak yeni bölgeler oluşturulduğunda, bu isteğe bağlı değer "
+"üçüncü ad sunucusu olarak kullanılacaktır."
 
 #: install/templates/step5.html.twig:108
 msgid "Quaternary Nameserver"
@@ -2148,7 +2205,9 @@ msgstr "Dördüncül Ad Sunucusu"
 msgid ""
 "When creating new zones using the template, this optional value will be used "
 "as quaternary nameserver."
-msgstr "Şablonu kullanarak yeni bölgeler oluşturulduğunda, bu isteğe bağlı değer dördüncü ad sunucusu olarak kullanılacaktır."
+msgstr ""
+"Şablonu kullanarak yeni bölgeler oluşturulduğunda, bu isteğe bağlı değer "
+"dördüncü ad sunucusu olarak kullanılacaktır."
 
 #: install/templates/step8.html.twig:3 install/templates/step8.html.twig:8
 msgid "Installation complete"
@@ -2178,7 +2237,8 @@ msgstr ""
 msgid ""
 "Poweradmin will not function if the install directory exists, as a security "
 "measure."
-msgstr "Güvenlik önlemi olarak, kurulum dizini varsa Poweradmin çalışmayacaktır."
+msgstr ""
+"Güvenlik önlemi olarak, kurulum dizini varsa Poweradmin çalışmayacaktır."
 
 #: install/templates/step8.html.twig:22
 msgid "Next Steps"
@@ -2220,7 +2280,10 @@ msgstr "PowerDNS Hakkında"
 msgid ""
 "PowerDNS is a DNS server that stores its data in an SQL database. Poweradmin "
 "will help you manage this database via a web interface."
-msgstr "PowerDNS, verilerini bir SQL veritabanında saklayan bir DNS sunucusudur. Poweradmin, bu veritabanını bir web arayüzü üzerinden yönetmenize yardımcı olacaktır."
+msgstr ""
+"PowerDNS, verilerini bir SQL veritabanında saklayan bir DNS sunucusudur. "
+"Poweradmin, bu veritabanını bir web arayüzü üzerinden yönetmenize yardımcı "
+"olacaktır."
 
 #: install/templates/step3.html.twig:21
 msgid "Before proceeding, you should have:"
@@ -2232,7 +2295,8 @@ msgstr "Çalışan bir PowerDNS kurulumu"
 
 #: install/templates/step3.html.twig:24
 msgid "Database connectivity details (hostname, username, password)"
-msgstr "Veritabanı bağlantı detayları (ana bilgisayar adı, kullanıcı adı, şifre)"
+msgstr ""
+"Veritabanı bağlantı detayları (ana bilgisayar adı, kullanıcı adı, şifre)"
 
 #: install/templates/step3.html.twig:25
 msgid "Administrative access to your database"
@@ -2286,7 +2350,9 @@ msgstr "Make sure the SQLite database file exists"
 msgid ""
 "Check that the web server has read and write permissions for the database "
 "file"
-msgstr "Web sunucusunun veritabanı dosyası için okuma ve yazma izinlerine sahip olduğunu kontrol edin"
+msgstr ""
+"Web sunucusunun veritabanı dosyası için okuma ve yazma izinlerine sahip "
+"olduğunu kontrol edin"
 
 #: install/helpers/InstallStepHandler.php:187
 msgid "Verify the full path to the database file is correct and accessible"
@@ -2297,19 +2363,25 @@ msgstr "Verify the full path to the database file is correct and accessible"
 msgid ""
 "The SQLite database file %s does not exist. Please create the database file "
 "before proceeding."
-msgstr "SQLite veritabanı dosyası %s mevcut değil. Devam etmeden önce lütfen veritabanı dosyasını oluşturun."
+msgstr ""
+"SQLite veritabanı dosyası %s mevcut değil. Devam etmeden önce lütfen "
+"veritabanı dosyasını oluşturun."
 
 #: install/helpers/DatabaseHelper.php:96
 #, php-format
 msgid ""
 "The SQLite database file %s is not readable. Please check file permissions."
-msgstr "SQLite veritabanı dosyası %s okunamıyor. Lütfen dosya izinlerini kontrol edin."
+msgstr ""
+"SQLite veritabanı dosyası %s okunamıyor. Lütfen dosya izinlerini kontrol "
+"edin."
 
 #: install/helpers/DatabaseHelper.php:104
 #, php-format
 msgid ""
 "The SQLite database file %s is not writable. Please check file permissions."
-msgstr "SQLite veritabanı dosyası %s yazılabilir değil. Lütfen dosya izinlerini kontrol edin."
+msgstr ""
+"SQLite veritabanı dosyası %s yazılabilir değil. Lütfen dosya izinlerini "
+"kontrol edin."
 
 #: install/helpers/DatabaseHelper.php:116
 #, php-format
@@ -2324,5 +2396,8 @@ msgstr "or"
 msgid ""
 "No configuration file found. Please create the config/settings.php file "
 "before proceeding."
-msgstr "Yapılandırma dosyası bulunamadı. Devam etmeden önce lütfen config/settings.php dosyasını oluşturun."
+msgstr ""
+"Yapılandırma dosyası bulunamadı. Devam etmeden önce lütfen config/"
+"settings.php dosyasını oluşturun."
+
 
